# molecular-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
input/: sample_sequences.fasta
molecular_parser/: __init__.py  analysis.py  cli.py
tests/: test_analysis.py  test_cli.py
